Freedom Sanbox Ant Deploy/src/objects/ProfilerQuestions__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AnswerOptions__c</fullName>
        <description>To keep answer options separated by ; token.</description>
        <label>AnswerOptions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>To keep Profiler question</description>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>stores the associated score for each question</description>
        <label>Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ProfilerQuestion</label>
    <nameField>
        <displayFormat>PQ-{00}</displayFormat>
        <label>ProfilerQuestion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfilerQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>